syntax = "proto3";

option csharp_namespace = "Discount.gRPC.Protos";

service DiscountProtoService {
    rpc Get(GetDiscountRequest) returns (CouponModel); 
    rpc Create(CreateDiscountRequest) returns (CouponModel); 
    rpc Update(UpdateDiscountRequest) returns (CouponModel); 
    rpc Delete(DeleteDiscountRequest) returns (DeleteDiscountResponse); 
}

message GetDiscountRequest {
    string productName = 1;
}

message CreateDiscountRequest {
    CouponModel coupon = 1;
}

message UpdateDiscountRequest {
    CouponModel coupon = 1;
}

message DeleteDiscountRequest {
    string productName = 1;
}

message DeleteDiscountResponse {
    bool success = 1;
}

message CouponModel {
    int32 id = 1;
    string productName = 2;
    string description = 3;
    int32 amount = 4;
}